--- a/admin/src/styles.css
+++ b/admin/src/styles.css
@@ -210,7 +210,10 @@ form button:hover {
     flex-direction: column;
     align-items: flex-start;
   }
-
+  
+  .navbar h1{
+    justify-content: center;
+  }
   .flower-card {
     flex-direction: column;
     align-items: flex-start;
