--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1436,6 +1436,21 @@ h1 {
 .auth-toggle-link:hover {
   text-decoration: underline;
 }
+.cart button{
+  margin-top: 40px;
+  width: 100%;
+  font-family: 'Montserrat';
+  font-weight: 500;
+  font-style: Medium;
+  font-size: 16px;
+  line-height: 120%;
+  letter-spacing: 3%;
+  color: white;
+  background-color: green;
+  border: none;
+  padding: 21px 20px;
+  cursor: pointer;
+}
 
 .nav .hamburger{
   display: none;
